Alterar status do head para PENDING_CONFIRMATION ao aprovar o cadastro
